--- a/Practice_1/00_index.html
+++ b/Practice_1/00_index.html
@@ -41,20 +41,22 @@
 
     <!-- แนบลิงค์แบบ internal -> เชื่อมโยงเว็บในไฟล์เดียวกัน -->
     <!-- target="_blank" เปิดลิงค์โดยเปิดแท็บใหม่ -->
-    <a href="List.html">List</a><br>
-    <a href="Table.html">Table</a><br>
-    <a href="photo/Image.html">Image</a><br>
-    <a href="span_div.html">Span/Div</a><br>
-    <a href="Form.html">Form</a><br>
-    <a href="class_id.html">Class/ID</a><br>
-    <a href="semantic_tag.html">Semantic tag</a><br>
-    <a href="entity.html">Entity</a><br>
-    <a href="video.html">Video</a><br>
-    <a href="sound.html">Sound</a><br>
+    <a href="01_List.html">List</a><br>
+    <a href="02_Table.html">Table</a><br>
+    <a href="03_Image.html">Image</a><br>
+    <a href="04_span_div.html">Span/Div</a><br>
+    <a href="05_Form.html">Form</a><br>
+    <a href="06_class_id.html">Class/ID</a><br>
+    <a href="07_semantic_tag.html">Semantic tag</a><br>
+    <a href="08_entity.html">Entity</a><br>
+    <a href="09_video.html">Video</a><br>
+    <a href="10_sound.html">Sound</a><br>
     
     <!-- แนบลิงค์แบบ external -> เชื่อมโยงเว็บข้างนอกไฟล์ -->
     <a href="http://www.youtube.com">YouTube</a><br>
     <a href="https://github.com/poonchub">Github</a>
+
+
     
 </body>
 </html>
