--- a/Practice_1/01_List.html
+++ b/Practice_1/01_List.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="index.html">กลับหน้าหลัก</a>
+    <a href="00_index.html">กลับหน้าหลัก</a>
     <h1>My favorite</h1>
 
     <!-- List การแสดงรายการ -->
