--- a/Practice_1/02_Table.html
+++ b/Practice_1/02_Table.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Computer language</h1>
-    <a href="index.html">กลับหน้าหลัก</a>
+    <a href="00_index.html">กลับหน้าหลัก</a>
 
     <!-- การสร้างตาราง -->
     <!-- 
