--- a/Practice_1/03_Image.html
+++ b/Practice_1/03_Image.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <!-- ย้อนกลับหน้าเว็บ -->
-    <a href="../index.html">กลับหน้าหลัก</a>
+    <a href="00_index.html">กลับหน้าหลัก</a>
 
     <!-- เพิ่มรูปภาพ แบบ internal -->
-    <img src="../../Image/IMG_3473.jpg" alt="Me in school" width="200px" height=""><br>
+    <img src="../Image/IMG_3473.jpg" alt="Me in school" width="200px" height=""><br>
 
     <!-- เพิ่มรูปภาพ แบบ external -->
     <img src="https://www.thesprucepets.com/thmb/AyzHgPQM_X8OKhXEd8XTVIa-UT0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages-145577979-d97e955b5d8043fd96747447451f78b7.jpg" alt="" width="200px"><br>
