--- a/Practice_1/04_span_div.html
+++ b/Practice_1/04_span_div.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <a href="index.html">กลับหน้าหลัก</a><br>
+    <a href="00_index.html">กลับหน้าหลัก</a><br>
     
     <!-- Span ใช้จัดข้อมูลเป็นกลุ่ม ไม่ขึ้นบรรทัดใหม่ -->
     <span style="color:red">
