--- a/Practice_1/05_Form.html
+++ b/Practice_1/05_Form.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="index.html">กลับหน้าหลัก</a>
+    <a href="00_index.html">กลับหน้าหลัก</a>
 
     <!-- form ใช้ในการสร้างแบบฟอร์ม -->
     <!-- 
