--- a/Practice_1/06_class_id.html
+++ b/Practice_1/06_class_id.html
@@ -25,7 +25,7 @@
 
 </head>
 <body>
-    <a href="index.html">กลับหน้าหลัก</a>
+    <a href="00_index.html">กลับหน้าหลัก</a>
     <!--
         class / id  จัดกลุ่ม Tag เพื่อให้ง่ายต่อการนำไปใช้กับ css, javasclip
 
