--- a/Practice_1/07_semantic_tag.html
+++ b/Practice_1/07_semantic_tag.html
@@ -73,7 +73,7 @@
     </style>
   </head>
   <body>
-    <a href="index.html">กลับหน้าหลัก</a>
+    <a href="00_index.html">กลับหน้าหลัก</a>
 
     <!-- Header -->
     <header id="header" class="card">
