--- a/Practice_1/10_sound.html
+++ b/Practice_1/10_sound.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="index.html">กลับหน้าหลัก</a><br>
+    <a href="00_index.html">กลับหน้าหลัก</a><br>
 
     <!-- Sound -->
     <audio src="../sound/SnapInsta.io - lilbubblegum x ciscaux - west side story (prod $upreme) (128 kbps).mp3" type="audio/mp3" controls autoplay></audio>
